--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,4 +1,7 @@
 h1 Users
+form(action="/users/search",method = "get")
+    input(type="text" name ="q")
+    button search
 ul
     each user in users
         li= user.name
