--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -1,4 +1,5 @@
 h1 Users
+a(href="/users/create") create
 form(action="/users/search",method = "get")
     input(type="text" name ="q")
     button search
