--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -5,7 +5,4 @@ form(action="/users/search",method = "get")
     button search
 ul
     each user in users
-        li
-            span= user.name
-            span &nbsp;
-            a(href="/users/"+user.id) View
+        li= user.name 
