--- a/views/users/index.pug
+++ b/views/users/index.pug
@@ -5,4 +5,7 @@ form(action="/users/search",method = "get")
     button search
 ul
     each user in users
-        li= user.name 
+        li
+            span= user.name
+            span &nbnp;
+            a(href="/users/"+user.id) View
