--- a/views/users/create.pug
+++ b/views/users/create.pug
@@ -1,7 +1,9 @@
-h1 create user
-form(action="/users/create", method ="post")
-    label(for="name") Name
-    input(type="text",name="name")
-    label Phone
-    input(type="text",name="phone")
-    button create
+extends ../layouts/common
+block content 
+    h1 create user
+    form(action="/users/create", method ="post")
+        label(for="name") Name
+        input(type="text",name="name")
+        label Phone
+        input(type="text",name="phone")
+        button create
